--- a/include/ulaval-dark.scss
+++ b/include/ulaval-dark.scss
@@ -1,6 +1,18 @@
 /*-- scss:defaults --*/
 // quarto-scss-analysis-annotation { "origin": "ulaval-dark" }
 
+// Fonts 
+@font-face {
+  font-family: 'font-title';
+  src: url("fonts/SourceCodePro-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'font-base';
+  src: url("fonts/SourceCodePro-Light.ttf") format("truetype");
+}
+
+
 $theme: "ulaval-dark" !default;
 
 //
@@ -49,7 +61,7 @@ $body-color:                $gray-100 !default;
 
 // Links
 
-$link-color:                $success !default;
+$link-color:                $orange !default;
 $link-hover-color:          $link-color !default;
 
 // Components
@@ -59,7 +71,27 @@ $component-active-bg:         $gray-700 !default;
 
 // Fonts
 
-$font-family-sans-serif:      "Source Sans 3", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif: "font-base", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$headings-font-family: font-title !default;
+
+// Font sizes
+$font-size-base: 1rem !default;
+$h1-font-size: $font-size-base * 2.5 !default;
+$h2-font-size: $font-size-base * 2 !default;
+$h3-font-size: $font-size-base * 1.75 !default;
+$h4-font-size: $font-size-base * 1.5 !default;
+$h5-font-size: $font-size-base * 1.25 !default;
+$h6-font-size: $font-size-base !default;
+
+// Titles
+h1 {
+  color: $primary !important; 
+}
+ 
+h2, h3 {
+  color: $primary !important; 
+}
+
 
 // Tables
 
@@ -189,6 +221,14 @@ $btn-close-color:                       $white !default;
 
 $pre-color:                         inherit !default;
 
+// Footer 
+.nav-footer {
+  color: $link-color;
+}
+
+a.link-footer {
+  color: $link-color;
+}
 
 
 /*-- scss:rules --*/
@@ -257,8 +297,9 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200
   --bs-tooltip-color: var(--bs-emphasis-color);
 }
 
-.sidebar-logo {
-  content: url("./include/logo-dark.svg");
+// Logo
+.sidebar-logo{
+    content: url("./include/logo-dark.png");
 }
 
 // quarto-scss-analysis-annotation { "origin": null }
