--- a/include/ulaval.scss
+++ b/include/ulaval.scss
@@ -1,6 +1,17 @@
 /*-- scss:defaults --*/
 // quarto-scss-analysis-annotation { "origin": "ulaval" }
 
+// Fonts
+@font-face {
+  font-family: 'font-title';
+  src: url("fonts/SourceCodePro-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'font-base';
+  src: url("fonts/SourceCodePro-Light.ttf") format("truetype");
+}
+
 $theme: "ulaval" !default;
 
 //
@@ -49,11 +60,15 @@ $enable-rounded: false !default;
 
 $body-color:    $gray-700 !default;
 
+// Link 
+$link-color: $red !default;
+$link-hover-color: $link-color !default;
+
 // Fonts
 
 // stylelint-disable-next-line value-keyword-case
-$font-family-sans-serif:    "Source Sans 3", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$headings-font-weight:      400 !default;
+$font-family-sans-serif: font-base, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$headings-font-family: font-title !default;
 
 // Navbar
 
@@ -68,7 +83,32 @@ $alert-border-width:            0 !default;
 
 $progress-height:               .5rem !default;
 
+// Font sizes
+$font-size-base: 1rem !default;
+$h1-font-size: $font-size-base * 2.5 !default;
+$h2-font-size: $font-size-base * 2 !default;
+$h3-font-size: $font-size-base * 1.75 !default;
+$h4-font-size: $font-size-base * 1.5 !default;
+$h5-font-size: $font-size-base * 1.25 !default;
+$h6-font-size: $font-size-base !default;
 
+// Title
+h1 {
+  color: $primary !important; 
+}
+
+h2, h3 {
+  color: $primary !important; 
+}
+
+// Footer
+.nav-footer {
+  color: $link-color;
+}
+
+a.link-footer {
+  color: $link-color;
+}
 
 /*-- scss:rules --*/
 
