--- a/include/ulaval.scss
+++ b/include/ulaval.scss
@@ -102,11 +102,8 @@ h2, h3 {
 }
 
 // Footer
-.nav-footer {
-  color: $link-color;
-}
 
-a.link-footer {
+.nav-footer .nav-footer-center .link-footer {
   color: $link-color;
 }
 
