--- a/include/ulaval.css
+++ b/include/ulaval.css
@@ -1,3 +1,64 @@
+/* Font */
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,700,700i);
+@import url(https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css);
+
+body {
+  font-family: 'Fira Sans','Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif;
+}
+
+.remark-code, .remark-inline-code {
+  font-family: 'Fira Code', 'Lucida Console', Monaco, monospace;
+  font-size: 80%;
+}
+
+
+/* Title slide */
+#title-slide {
+  background-color: #FFFFFF;
+  border-top: 80px solid #FFFFFF;
+  /* background-image: url(../img/logo-ul.png), url(../img/irmes.png); */
+  background-position: 35% 95%, 70% 95%;
+  background-size: 20%, 20%;
+  border-bottom: 2px solid  #E30513;
+  box-shadow:  0 55px 0 #fff;
+}
+
+#title-slide h1  {
+color: #E30513;
+font-size: 40px;
+text-shadow: none;
+font-weight: 400;
+text-align: left;
+margin-left: 15px;
+padding-top: 80px;
+}
+
+#title-slide h2  {
+margin-top: -25px;
+padding-bottom: -20px;
+color: #E3051380;
+text-shadow: none;
+font-weight: 300;
+font-size: 35px;
+text-align: left;
+margin-left: 15px;
+}
+
+#title-slide h3  {
+color: #E3051370;
+text-shadow: none;
+font-weight: 300;
+font-size: 25px;
+text-align: left;
+margin-left: 15px;
+margin-bottom: -30px;
+}
+
+.fas fa-bars {
+  color: #E30513;
+}
+
+/* ------ */
 .remark-slide-content {
   background-color: #FAFAFA;
   border-top: 80px solid #E30513;
@@ -113,46 +174,7 @@ h2, h3, h4 {
   color: #1A292C;
 }
 
-.title-slide {
-    background-color: #FAFAFA;
-    border-top: 80px solid #FAFAFA;
-    /* background-image: url(../img/logo-ul.png), url(../img/irmes.png); */
-    background-position: 35% 95%, 70% 95%;
-  background-size: 20%, 20%;
-  border-bottom: 2px solid  #E30513;
-  box-shadow:  0 55px 0 #fff;
-}
 
-.title-slide h1  {
-  color: #E3051390;
-  font-size: 40px;
-  text-shadow: none;
-  font-weight: 400;
-  text-align: left;
-  margin-left: 15px;
-  padding-top: 80px;
-}
-
-.title-slide h2  {
-  margin-top: -25px;
-  padding-bottom: -20px;
-  color: #E3051380;
-  text-shadow: none;
-  font-weight: 300;
-  font-size: 35px;
-  text-align: left;
-  margin-left: 15px;
-}
-
-.title-slide h3  {
-  color: #E3051370;
-  text-shadow: none;
-  font-weight: 300;
-  font-size: 25px;
-  text-align: left;
-  margin-left: 15px;
-  margin-bottom: -30px;
-}
 
 hr, .title-slide h2::after, .mline h1::after {
   content: '';
