--- a/include/ulaval-slide.scss
+++ b/include/ulaval-slide.scss
@@ -1,13 +1,115 @@
 /*-- scss:defaults --*/
 
-$body-bg: #191919;
-$body-color: #fff;
-$link-color: #42affa;
+// Fonts
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+$font-family-sans-serif: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$headings-font-family: "Fira Sans" !default;
+
+
+// Colors
+$body-bg: #FAFAFA;
+$body-color: #333333;
+$link-color: #E30513;
 
 /*-- scss:rules --*/
 
-.reveal .slide blockquote {
-  border-left: 3px solid $text-muted;
-  padding-left: 0.5em;
+/* Title slide */
+#title-slide {
+  /* Left alignment */
+  text-align: left;
+  .quarto-title-authors {
+    justify-content: left;
+  
+    .quarto-title-author {
+      padding-left: 0;
+      padding-right: 0;
+      width: 100%;
+    }
+  }
 }
 
+#title-slide h1  {
+  color: #E30513;
+  font-size: 60px;
+  text-shadow: none;
+  font-weight: 400;
+  padding-top: 80px;
+}
+
+#title-slide .subtitle  {
+  padding-bottom: -20px;
+  color: #E30513;
+  text-shadow: none;
+  font-weight: 300;
+  font-size: 40px;
+}
+
+hr, #title-slide .subtitle::after, .mline .subtitle::after {
+  content: '';
+  display: block;
+  border: none;
+  background-color: #ffc103;
+  color: #ffc103;
+  height: 1px;
+}
+
+#title-slide .quarto-title-authors  {
+  color: #000000;
+  text-shadow: none;
+  font-weight: 300;
+  font-size: 35px;
+}
+
+#title-slide .date  {
+  color: #000000;
+  text-shadow: none;
+  font-weight: 300;
+  font-size: 35px;
+}
+
+
+/* Level 1 slides */
+.level1 h1 {
+  color: #E30513;
+  font-size: 60px;
+  text-shadow: none;
+  font-weight: 400;
+}
+
+hr, .level1 h1::after, .mline h1::after {
+  content: '';
+  display: block;
+  border: none;
+  background-color: #ffc103;
+  color: #ffc103;
+  height: 1px;
+}
+
+/* Level 2 slides */
+.level2 h2 {
+  color: #E30513;
+  font-size: 50px;
+  text-shadow: none;
+  font-weight: 300;
+}
+
+hr, .level2 h2::after, .mline h2::after {
+  content: '';
+  display: block;
+  border: none;
+  background-color: #ffc103;
+  color: #ffc103;
+  height: 1px;
+}
+
+.level2 p {
+  font-size: 40px;
+  text-shadow: none;
+  font-weight: 200;
+}
+
+/* Slide number */
+.reveal .slide-number > a[href*='title-slide'] {
+  display: none;
+}
