--- a/include/ulaval-dark.scss
+++ b/include/ulaval-dark.scss
@@ -54,6 +54,13 @@ $dark:          $gray-700 !default;
 
 $min-contrast-ratio:   2.5 !default;
 
+// Callout 
+$callout-color-note: $cyan;
+$callout-color-tip: $green;
+$callout-color-caution: $red;
+$callout-color-warning: $orange;
+$callout-color-important: $yellow;
+
 // Body
 
 $body-bg:                   $gray-700 !default;
