--- a/include/ulaval-slide.scss
+++ b/include/ulaval-slide.scss
@@ -6,6 +6,7 @@
 $font-family-sans-serif: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $headings-font-family: "Fira Sans" !default;
 
+$presentation-h2-font-size: 1.1em !default;
 
 // Colors
 $body-bg: #FAFAFA;
@@ -93,7 +94,7 @@ hr, .level1 h1::after, .mline h1::after {
 /* Level 2 slides */
 .level2 h2 {
   color: #E30513;
-  font-size: 50px;
+  font-size: 1.1em;
   text-shadow: none;
   font-weight: 300;
 }
